--- a/backend/components/layout.templ
+++ b/backend/components/layout.templ
@@ -1,10 +1,10 @@
-package templates
+package components
 
 templ Layout(title string, body templ.Component) {
   <html data-theme="light">
     <head>
       <title>{ title }</title>
-      <script src="https://unpkg.com/htmx.org@1.9.6"></script>
+      <script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.6/dist/htmx.min.js"></script>
       <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.css" rel="stylesheet" />
       <script src="https://cdn.tailwindcss.com"></script>
     </head>
